--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     <nav>
         <a href="#">Home</a>
         <a href="#">Notícias</a>
-        <a href="#">Curiosidades</a>
-        <a href="#">Fale conosco</a>
+        <a href="#">Contato</a>
+        
     </nav>
     <main>
         <article>
@@ -110,7 +110,7 @@
             </aside>
             
 
-            Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.
+            <p class="ultimo">Então é isso! Espero que você tenha gostado do nosso artigo com essa curiosidade sobre o sistema Android e seu simpático mascote.</p>
         </article>
     </main>
     <footer>
